# mnm

./: .env.example  .gitignore  CHANGELOG.md  README.md  UPGRADE.md  docker-compose.expert.yml  docker-compose.yml
docs/: API.md  (+16 more)
nautobot-plugin/: README.md  pyproject.toml
nautobot-plugin/mnm_plugin/: __init__.py  apps.py  exports.py  filter_dsl.py  filters.py  forms.py  models.py  navigation.py  tables.py  template_content.py  urls.py  views.py
nautobot-plugin/mnm_plugin/api/: __init__.py  serializers.py  urls.py  views.py
nautobot-plugin/mnm_plugin/migrations/: 0001_initial.py  0002_arp_mac_lldp.py  0003_route_bgp_fingerprint.py
nautobot-plugin/mnm_plugin/static/mnm_plugin/: filter_bar.js
nautobot-plugin/mnm_plugin/templates/mnm_plugin/: arpentry_detail.html  arpentry_list.html  bgpneighbor_detail.html  bgpneighbor_list.html  endpoint_detail.html  endpoint_list.html  fingerprint_detail.html  fingerprint_list.html  lldpneighbor_detail.html  lldpneighbor_list.html  macentry_detail.html  macentry_list.html  route_detail.html  route_list.html
nautobot-plugin/mnm_plugin/templates/mnm_plugin/inc/: filter_bar.html  interface_panels.html
nautobot-plugin/mnm_plugin/tests/: test_controller_client.py  test_exports.py  test_filter_dsl.py  test_filters.py  test_migrations.py  test_models.py  test_models_arp.py  test_models_bgp.py  test_models_fingerprint.py  test_models_lldp.py  test_models_mac.py  test_models_route.py  test_template_content.py  test_utils_interface.py  test_views.py
nautobot-plugin/mnm_plugin/utils/: __init__.py  controller_client.py  interface.py
(+115 files in other folders)
